# linux-note

./: .gitconfig  .gitmodules  README.md  os.md  overlayfs_implementation.md
db/Database-System-Concepts/: README.md
design-pattern/: CMakeLists.txt  README.md
design-pattern/decorator/: CMakeLists.txt  beverage.cc  beverage.h  condiment_decorator.cc  condiment_decorator.h  dark_roast.cc  dark_roast.h  decaf.cc  decaf.h  decorator.h  espresso.cc  espresso.h  house_blend.cc  house_blend.h  main.cc  mocha.cc  mocha.h  soy.cc  soy.h  whip.cc  whip.h
design-pattern/observer/: CMakeLists.txt  CurrentConditionsDisplay.cc  CurrentConditionsDisplay.h  ForecastDisplay.cc  ForecastDisplay.h  HeatIndexDisplay.cc  HeatIndexDisplay.h  IDisplayElement.h  IObserver.h  StatisticsDisplay.cc  StatisticsDisplay.h  Subject.cc  Subject.h  WeatherData.cc  WeatherData.h  main.cc
design-pattern/strategy/: CMakeLists.txt  DecoyDuck.h  Duck.cc  Duck.h  FakeQuack.h  FlyBehavior.h  FlyNoWay.h  FlyRocketPowered.h  FlyWithWings.h  MallardDuck.h  MiniDuckSimulator.cc  MiniDuckSimulator.h  ModelDuck.h  MuteQuack.h  Quack.h  QuackBehavior.h  RedHeadDuck.h  RubberDuck.h  Squeak.h
docker/: Dockerfile  README.md  test.sh
io/: README.md
io/fs/: fs.md  inotify.cc  inotify.md
memory/: README.md
performance/: 1.cpu_1.md  1.cpu_2.md  1.cpu_3.md  README.md
process/: README.md  note_1.md  note_2.md  note_3.md  note_4.md  qa.md  relate.md  sched.md  趣说进程.doc
